# rustforces

./: .gitignore  Cargo.toml  README.md
src/: apollo_vs_plan_1466E.rs  array_destruction_1474C.rs  busy_robot_1463C.rs  catching_cheaters_1446B.rs  cheap_dinner_1487E.rs  chef_monocarp_1437C.rs  copy_or_prefix_sum_1485F.rs  deja_vu_1504A.rs  diamond_miner_1496C.rs  explorer_space_1517D.rs  fence_painting_1481C.rs  flip_the_bits_1504B.rs  going_home_1500A.rs  in.txt  lib.rs  longest_simple_cycle_1476C.rs  main.rs  max_and_mex_1496B.rs  mexor_mixup_1567B.rs  mother.rs  non_decreasing_dilemma_1567E.rs  not_sitting_1627B.rs  out.txt  painting_the_array_1479B2.rs  pairs_1463D.rs  rating_compression_1450D.rs  reversing_a_ll.rs  road_reform_1468J.rs  salary_changing_1251D.rs  searching_local_minimum_1479A.rs  split_it_1496A.rs
