[package]
name = "playground"
version = "0.1.0"
authors = ["Szymon Habrainski <56340221+schiemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# tokio = { version = "1", features = ["full"] }
# rand = "0.8.3"
# futures = "0.3.13"